...
        HelperFunctions.showMessage(context, '$message', Colors.green);
    });
    super.initState();
    _companyController..text = kReleaseMode ? '' : 'Demo company from John Doe';
    _firstNameController..text = kReleaseMode ? '' : 'John';
    _lastNameController..text = kReleaseMode ? '' : 'Doe';
    _emailController..text = kReleaseMode ? '' : 'test@example.com';
    _demoData = kReleaseMode ? false : true;
    _currencySelected = currencies[0];
  }

  @override
  Widget build(BuildContext context) {
...
                              });
                            })),
                    SizedBox(height: 10),
                    Row(children: [
                      Expanded(
                          child: ElevatedButton(
                              key: Key('newCompany'),
                              child: Text('Register AND create a new Company'),
                              onPressed: () {
                                if (_formKey.currentState!.validate())
                                  context
                                      .read<AuthBloc>()
                                      .add(AuthRegisterCompanyAndAdmin(
...
