...
                child: SingleChildScrollView(
                  key: const Key('listView'),
                  child: Column(
                    children: [
                      const SizedBox(height: 20),
                      TextFormField(
                        key: const Key('resetEmail'),
                        controller: _usernameController,
                        autofocus: true,
                        decoration: InputDecoration(
                          labelText: _localizations!.email,
                        ),
                      ),
                      const SizedBox(height: 20),
                      OutlinedButton(
                        key: const Key('resetPasswordOk'),
                        child: Text(_localizations!.ok),
                        onPressed: () {
                          _authBloc.add(
                            AuthResetPassword(
                              username: _usernameController.text,
                            ),
...
